--- a/bb.html
+++ b/bb.html
@@ -85,7 +85,7 @@
 
 <div class="container">
   <h2>Address Details</h2>
-  <form action="index.html" method="get">
+  <form action="payment.html" method="get">
     <div class="form-group">
   <form action="/submit-address" method="post">
     <div class="form-group">
