--- a/Contact/SS.html
+++ b/Contact/SS.html
@@ -93,7 +93,7 @@ ul :hover{
 </head>
 <body>
     <header>
-        <h1 style="color: black;">Neeladri's Online Fuel Services</h1> <br>
+        <h1 style="color: black;">FUEL AT EASE ONLINE SERVICES</h1> <br>
     </header>
     <main>
         <section class="sales-solutions">
